Implantação de Livro no Swagger
